--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 asgiref==3.6.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+click==8.1.3
 Django==4.1.5
+Django-Gtts==0.4
+gTTS==2.3.1
+idna==3.4
+requests==2.28.2
 sqlparse==0.4.3
+urllib3==1.26.14
