--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
+aiohttp==3.8.4
+aiosignal==1.3.1
 asgiref==3.6.0
+async-timeout==4.0.2
+attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 click==8.1.3
@@ -6,23 +10,28 @@ Django==4.1.5
 django-cors-headers==3.13.0
 Django-Gtts==0.4
 djangorestframework==3.14.0
+frozenlist==1.3.3
 gTTS==2.3.1
 idna==3.4
+multidict==6.0.4
+node==1.2
+npm==0.1.1
+odict==1.9.0
+openai==0.27.0
+optional-django==0.1.0
+plumber==1.7
+python-dotenv==1.0.0
 pytz==2022.7.1
 requests==2.28.2
 sqlparse==0.4.3
+tqdm==4.65.0
 urllib3==1.26.14
-asgiref==3.6.0
-certifi==2022.12.7
-charset-normalizer==3.0.1
-click==8.1.3
-Django==4.1.5
-django-cors-headers==3.13.0
-Django-Gtts==0.4
-djangorestframework==3.14.0
-gTTS==2.3.1
-idna==3.4
-pytz==2022.7.1
-requests==2.28.2
-sqlparse==0.4.3
-urllib3==1.26.14
+yarl==1.8.2
+zope.component==5.1.0
+zope.deferredimport==4.4
+zope.deprecation==4.4.0
+zope.event==4.6
+zope.hookable==5.4
+zope.interface==5.5.2
+zope.lifecycleevent==4.4
+zope.proxy==5.0.0
